--- a/css/main.css
+++ b/css/main.css
@@ -6,21 +6,30 @@ body {
 }
 
 .site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #fff;
 }
 
-.site-nav-list {
+.site-header-actions {
+  display: flex;
+  align-items: center;
+}
+
+.sitenav-list {
+  display: flex;
   list-style: none;
 }
 
 .sitenav-link {
-font-weight: 500;
-font-size: 13px;
-line-height: 15px;
-letter-spacing: 1px;
-text-transform: uppercase;
-text-decoration: none;
-color: #000;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000;
 }
 
 .main-link {
@@ -34,8 +43,11 @@ color: #000;
 }
 
 .hero {
+  display: flex;
   background: #252420;
   color: #fff;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero-content {
