--- a/css/main.css
+++ b/css/main.css
@@ -89,12 +89,22 @@ line-height: 1.2;
 font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 }
 
+.features-list {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+
+}
+
 .feature-info {
   font-size: 16px;
   line-height: 1.5;
 }
 
 .promo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #252420;
   color: #fff;
 }
@@ -122,13 +132,28 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   background-color: #f8f8f8;
 }
 
+.site-footer-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .site-footer li {
   list-style: none;
+}
+
+.site-footer-socials {
+  display: flex;
+  align-items: center;
 }
 
 .site-footer-divider {
   background-color: rgba(37, 36, 32, 0.5);
   height: 2px;
+}
+
+.site-footer-bottom {
+  display: flex;
 }
 
 .site-footer-links {
