--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,17 @@ body {
   font-family: "Roboto", "Arial", "san-serif";
   letter-spacing: 0.5px;
 }
+*:focus {
+  outline: 2px dotted #ff7500;
+  outline-offset: 3px;
 
+}
 .site-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fff;
+  border-top: 5px solid #ff7500;
+  background-color: #fff;
 }
 
 .logo-link {
@@ -31,6 +36,7 @@ body {
 .sitenav-list {
   display: flex;
   list-style: none;
+  padding: 0;
 }
 
 .sitenav-link {
@@ -52,7 +58,9 @@ body {
 }
 
 .main-link {
-  font-weight: 700;
+  display: inline-block;
+  padding: 12px 24px;
+  font-weight: bold;
   font-size: 13px;
   line-height: 15px;
   letter-spacing: 0.5px;
@@ -70,6 +78,8 @@ body {
 }
 
 .hero {
+  padding-top: 80px;
+  padding-bottom: 80px;
   display: flex;
   background: #252420;
   color: #fff;
@@ -84,6 +94,7 @@ body {
 .orange-line {
   width: 80px;
   height: 3px;
+  border: 0;
   background-color: #ff7500;
 }
 
@@ -92,6 +103,17 @@ body {
   line-height: 1.2;
   font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   letter-spacing: 0.5px;
+}
+
+.hero-img {
+  width: 510px;
+  height: 510px;
+  border-radius: 8px;
+}
+
+.features {
+  padding-top: 210px;
+  padding-bottom: 210px;
 }
 
 .feature {
@@ -105,6 +127,10 @@ width: 340px;
 }
 
 .fetures-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
   width: 100px;
   height: 100px;
   background: rgba(255, 117, 0, 0.2);
@@ -119,8 +145,8 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 .features-list {
   display: flex;
   list-style: none;
+  padding: 0;
   justify-content: space-between;
-
 }
 
 .feature-info {
@@ -132,6 +158,7 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 12px;
   background-color: #252420;
   color: #fff;
 }
@@ -150,12 +177,15 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 }
 
 .promo-img {
+  border-radius: 12px;
   width: 440px;
   height: 440px;
   object-fit: cover;
 }
 
 .site-footer {
+  padding-top: 56px;
+  padding-bottom: 56px;
   background-color: #f8f8f8;
 }
 
@@ -165,11 +195,13 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   justify-content: space-between;
 }
 
-.site-footer li {
+.site-footer-links {
+  padding: 0;
   list-style: none;
 }
 
 .site-footer-socials {
+  padding: 0;
   display: flex;
   align-items: center;
 }
@@ -185,6 +217,7 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 
 
 .site-footer-divider {
+  border: 0;
   background-color: rgba(37, 36, 32, 0.5);
   height: 2px;
 }
