--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ body {
 
 .main-link {
   display: inline-block;
+  border-radius: 4px;
   padding: 12px 24px;
   font-weight: bold;
   font-size: 13px;
