--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,9 @@ body {
 .logo-link {
   transition: opacity 0.4s ease;
 }
+.logo-link img {
+  display: block;
+}
 
 .logo-link:hover {
   opacity: 0.8;
@@ -37,6 +40,16 @@ body {
   display: flex;
   list-style: none;
   padding: 0;
+  margin: 0;
+  margin-right: 32px;
+}
+
+.sitenav-item {
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+  margin-right: 0;
 }
 
 .sitenav-link {
@@ -97,6 +110,8 @@ body {
   height: 3px;
   border: 0;
   background-color: #ff7500;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .hero-heading {
@@ -104,6 +119,13 @@ body {
   line-height: 1.2;
   font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
+.hero-text {
+  margin: 0;
+  margin-bottom: 32px;
 }
 
 .hero-img {
@@ -119,12 +141,19 @@ body {
 
 .feature {
 width: 340px;
+margin-right: 40px;
+}
+
+.feature:last-child {
+  margin-right: 0;
 }
 
 .features-heading {
   width: 440px;
   font-size: 72px;
   line-height: 1.2;
+  margin:0;
+  margin-bottom: 72px;
 }
 
 .fetures-icon-wrapper {
@@ -147,7 +176,7 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
   display: flex;
   list-style: none;
   padding: 0;
-  justify-content: space-between;
+  margin: 0;
 }
 
 .feature-info {
@@ -171,8 +200,22 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 .promo-heading {
   font-size: 40px;
   line-height: 48px;
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 
+.prom-info-wrapper {
+  margin-bottom: 24px;
+}
+
+.promo-text {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.promo-text:last-child {
+  margin-bottom: 0;
+}
 .promo-highlight {
   color: #ff7500;
 }
@@ -203,10 +246,19 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 
 .site-footer-socials {
   padding: 0;
+  margin: 0;
   display: flex;
   align-items: center;
 }
+.site-footer-socials li {
+  margin-right: 16px;
+  list-style: none;
+}
+.site-footer-socials li:last-child {
+  margin-right: 0;
+}
 .site-footer-socials a {
+  display: block;
   color: #252420;
 }
 .site-footer-socials a:hover {
@@ -215,10 +267,13 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 .site-footer-socials a:active {
   opacity: 0.6;
 }
-
-
+.site-footer-socials svg {
+  display: block;
+}
 .site-footer-divider {
   border: 0;
+  margin-top: 40px;
+  margin-bottom: 64px;
   background-color: rgba(37, 36, 32, 0.5);
   height: 2px;
 }
@@ -230,6 +285,14 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 .site-footer-links {
   width: 224px;
   line-height: 19px;
+  padding: 0;
+  margin: 0;
+  margin-right: 68px;
+  list-style: none;
+}
+
+.site-footer-links:last-child {
+  margin-right: 0px;
 }
 
 .site-footer-links a {
