--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
   font-size: 16px;
   line-height: 1.5;
   font-family: "Roboto", "Arial", "san-serif";
@@ -15,7 +17,7 @@ body {
 /* CONTAINER */
 .container {
 width: 100%;
-max-width: 1120px;
+max-width: 1140px;
 padding-left: 20px;
 padding-right: 20px;
 margin-left: auto;
@@ -108,9 +110,11 @@ margin-right: auto;
 .hero {
   padding-top: 80px;
   padding-bottom: 80px;
-  display: flex;
   background: #252420;
   color: #fff;
+}
+.hero-container {
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
@@ -143,6 +147,7 @@ margin-right: auto;
 }
 
 .hero-img {
+  box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
   width: 510px;
   height: 510px;
   border-radius: 8px;
@@ -177,10 +182,13 @@ margin-right: 40px;
   border-radius: 50%;
   width: 100px;
   height: 100px;
+  margin-bottom: 32px;
   background: rgba(255, 117, 0, 0.2);
 }
 
 .feature-titile {
+  margin-top: 0;
+  margin-bottom: 12px;
 font-size: 24px;
 line-height: 1.2;
 font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
@@ -194,19 +202,24 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 }
 
 .feature-info {
+  margin: 0;
   font-size: 16px;
   line-height: 1.5;
 }
 
 .promo {
+  padding-top: 120px;
+  padding-bottom: 160px;
+}
+.promo-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 64px;
   border-radius: 12px;
   background-color: #252420;
   color: #fff;
 }
-
 .promo-content {
   width: 440px;
 }
@@ -312,6 +325,12 @@ font-family: "Roboto Condensed", "Roboto", "Arial", "sans-serif";
 .site-footer-links a {
   text-decoration: none;
   color: #252420;
+}
+.site-footer-links li {
+  margin-bottom: 16px;
+}
+.site-footer-links li:last-child {
+  margin-bottom: 0px;
 }
 .site-footer-links a:hover {
   color: #ff7500;
